--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -31,6 +31,7 @@ dependencies:
   flutter:
     sdk: flutter
   flutter_svg: ^2.0.9
+  sign_in_button: ^3.0.0
 
 
   # The following adds the Cupertino Icons font to your application.
