--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -37,6 +37,7 @@ dependencies:
   cupertino_icons: ^1.0.8
   graphic: ^2.5.1
   fl_chart: ^0.70.2
+  persistent_bottom_nav_bar: any
 
 dev_dependencies:
   flutter_test:
