--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -42,6 +42,7 @@ dependencies:
   cloud_firestore: ^5.6.4
   firebase_core: ^3.12.0
   firebase_auth: ^5.5.0
+  quickalert: ^1.1.0
 
 dev_dependencies:
   flutter_test:
