--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -43,6 +43,7 @@ dependencies:
   firebase_core: ^3.12.0
   firebase_auth: ^5.5.0
   quickalert: ^1.1.0
+  google_sign_in: ^6.2.2
 
 dev_dependencies:
   flutter_test:
