--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -44,6 +44,7 @@ dependencies:
   firebase_auth: ^5.5.0
   quickalert: ^1.1.0
   google_sign_in: ^6.2.2
+  provider: ^6.1.2
 
 dev_dependencies:
   flutter_test:
